Homework3/modules/aws-network/network.tf
resource "aws_default_vpc" "default"{

}

resource "aws_security_group" "allow_ssh"{
   name = var.cluster_name_sg
    description = "Open ports for nginx demo"
    vpc_id = aws_default_vpc.default.id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
}

output "aws_ssh_id" {
    value = [aws_security_group.allow_ssh.id]
}
